[package]
name = "stack_overflow_survey_analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Stack Overflow Survey Analyzer"]
description = "A Rust library for analyzing Stack Overflow Survey data"

[[bin]]
name = "so_analyzer"
path = "src/bin/main.rs"

[dependencies]
calamine = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
indexmap = "2.9.0"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20.0"
